--- a/src/app/modules/dashboard/humans/pages/persons-create-faces/persons-create-faces.component.html
+++ b/src/app/modules/dashboard/humans/pages/persons-create-faces/persons-create-faces.component.html
@@ -66,7 +66,7 @@
           color="accent"
           [disabled]="faceForm.invalid"
         >
-          Add Face
+          Submit
         </button>
       </form>
     </mat-card-content>
