--- a/src/app/modules/dashboard/humans/pages/persons-questions/persons-questions.component.html
+++ b/src/app/modules/dashboard/humans/pages/persons-questions/persons-questions.component.html
@@ -83,7 +83,7 @@
               class="btn-operations"
               (click)="addQuestion()"
             >
-              Submit
+              ADD Question
             </button>
 
             <mat-card-actions>
@@ -93,7 +93,7 @@
                 color="accent"
                 [disabled]="questionsForm.invalid"
               >
-                Add All Questions
+                Submit
               </button>
             </mat-card-actions>
           </form>
